WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153306
WebCoreJSBuiltins do not need to use conditional include
https://bugs.webkit.org/show_bug.cgi?id=153306
Summary
WebCoreJSBuiltins do not need to use conditional include
youenn fablet
Reported
2016-01-21 07:47:36 PST
Compilation guards are generated by the built-in generator.
Attachments
Patch
(2.77 KB, patch)
2016-01-21 07:51 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.09 KB, patch)
2016-01-25 02:57 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Fixing MediaDevices
(3.76 KB, patch)
2016-01-25 05:07 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Fixing NavigatorUserMedia.js
(4.40 KB, patch)
2016-01-25 11:51 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-01-21 07:51:55 PST
Created
attachment 269454
[details]
Patch
Alex Christensen
Comment 2
2016-01-22 16:13:47 PST
Comment on
attachment 269454
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=269454&action=review
> Source/WebCore/bindings/js/WebCoreJSBuiltins.cpp:33 >
There's no need for this space, then, and the two lists should be merged.
youenn fablet
Comment 3
2016-01-25 02:57:29 PST
Created
attachment 269734
[details]
Patch for landing
youenn fablet
Comment 4
2016-01-25 02:58:13 PST
(In reply to
comment #2
)
> Comment on
attachment 269454
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=269454&action=review
> > > Source/WebCore/bindings/js/WebCoreJSBuiltins.cpp:33 > > > > There's no need for this space, then, and the two lists should be merged.
Thanks for the review. I fixed the cpp file accordingly.
WebKit Commit Bot
Comment 5
2016-01-25 03:36:24 PST
Comment on
attachment 269734
[details]
Patch for landing Clearing flags on attachment: 269734 Committed
r195531
: <
http://trac.webkit.org/changeset/195531
>
WebKit Commit Bot
Comment 6
2016-01-25 03:36:26 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7
2016-01-25 03:53:53 PST
Re-opened since this is blocked by
bug 153420
youenn fablet
Comment 8
2016-01-25 05:07:09 PST
Created
attachment 269742
[details]
Fixing MediaDevices
youenn fablet
Comment 9
2016-01-25 05:07:45 PST
(In reply to
comment #8
)
> Created
attachment 269742
[details]
> Fixing MediaDevices
MediaDevices was using @optional and not the new term @conditional, hence breaking some builds.
WebKit Commit Bot
Comment 10
2016-01-25 06:07:03 PST
Comment on
attachment 269742
[details]
Fixing MediaDevices Clearing flags on attachment: 269742 Committed
r195533
: <
http://trac.webkit.org/changeset/195533
>
WebKit Commit Bot
Comment 11
2016-01-25 06:07:06 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 12
2016-01-25 07:34:00 PST
Re-opened since this is blocked by
bug 153423
youenn fablet
Comment 13
2016-01-25 11:51:28 PST
Created
attachment 269775
[details]
Fixing NavigatorUserMedia.js
WebKit Commit Bot
Comment 14
2016-01-25 12:20:09 PST
Attachment 269775
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/WebCoreJSBuiltins.cpp:29: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 15
2016-01-25 23:32:37 PST
Comment on
attachment 269775
[details]
Fixing NavigatorUserMedia.js Clearing flags on attachment: 269775 Committed
r195584
: <
http://trac.webkit.org/changeset/195584
>
WebKit Commit Bot
Comment 16
2016-01-25 23:32:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug