WebCoreJSBuiltins do not use to do conditional include https://bugs.webkit.org/show_bug.cgi?id=153306

Reviewed by Alex Christensen.

Removing compilation guards as builtin generator adds them in the files themselves.

No change in behavior.

* bindings/js/WebCoreJSBuiltins.cpp:
* bindings/js/WebCoreJSBuiltins.h:


Canonical link: https://commits.webkit.org/171490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195531 268f45cc-cd09-0410-ab3c-d52691b4dbfc