Source/WebCore/bindings/js/WebCoreJSBuiltins.cpp
@@ -26,20 +26,13 @@
 
 #include "config.h"
 
-#if ENABLE(FETCH_API)
+#include "ByteLengthQueuingStrategyBuiltins.cpp"
+#include "CountQueuingStrategyBuiltins.cpp"
 #include "FetchHeadersBuiltins.cpp"
-#endif
-
-#if ENABLE(MEDIA_STREAM)
 #include "MediaDevicesBuiltins.cpp"
 #include "NavigatorUserMediaBuiltins.cpp"
 #include "RTCPeerConnectionBuiltins.cpp"
 #include "RTCPeerConnectionInternalsBuiltins.cpp"
-#endif
-
-#if ENABLE(STREAMS_API)
-#include "ByteLengthQueuingStrategyBuiltins.cpp"
-#include "CountQueuingStrategyBuiltins.cpp"
 #include "ReadableStreamBuiltins.cpp"
 #include "ReadableStreamControllerBuiltins.cpp"
 #include "ReadableStreamInternalsBuiltins.cpp"
@@ -47,4 +40,3 @@
 #include "StreamInternalsBuiltins.cpp"
 #include "WritableStreamBuiltins.cpp"
 #include "WritableStreamInternalsBuiltins.cpp"
-#endif
