Source/WebCore/bindings/js/WebCoreJSBuiltins.h
@@ -27,20 +27,13 @@
 #ifndef WebCoreJSBuiltins_h
 #define WebCoreJSBuiltins_h
 
-#if ENABLE(FETCH_API)
+#include "ByteLengthQueuingStrategyBuiltins.h"
+#include "CountQueuingStrategyBuiltins.h"
 #include "FetchHeadersBuiltins.h"
-#endif
-
-#if ENABLE(MEDIA_STREAM)
 #include "MediaDevicesBuiltins.h"
 #include "NavigatorUserMediaBuiltins.h"
 #include "RTCPeerConnectionBuiltins.h"
 #include "RTCPeerConnectionInternalsBuiltins.h"
-#endif
-
-#if ENABLE(STREAMS_API)
-#include "ByteLengthQueuingStrategyBuiltins.h"
-#include "CountQueuingStrategyBuiltins.h"
 #include "ReadableStreamBuiltins.h"
 #include "ReadableStreamControllerBuiltins.h"
 #include "ReadableStreamInternalsBuiltins.h"
@@ -48,8 +41,6 @@
 #include "StreamInternalsBuiltins.h"
 #include "WritableStreamBuiltins.h"
 #include "WritableStreamInternalsBuiltins.h"
-#endif
-
 #include <runtime/VM.h>
 
 namespace WebCore {
